--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "tap --coverage test/*.js",
     "build": "npm run build:css",
-    "build:css": "tailwindcss -i ./styles.css -o ./dist/output.css --watch"
+    "build:css": "tailwindcss -i ./styles.css -o ./dist/output.css",
+    "watch": "tailwindcss -i ./styles.css -o ./dist/output.css --watch"
   },
   "keywords": [
     "wide",
@@ -27,10 +28,10 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "postcss": "^8.4.47",
-    "string-width": "^1.0.2 || 2 || 3 || 4",
-    "tailwindcss": "^3.4.14"
+    "string-width": "^1.0.2 || 2 || 3 || 4"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.14",
     "tap": "*"
   },
   "files": [
